feat: Subscription portal

--- a/erpnext/translations/fr.csv
+++ b/erpnext/translations/fr.csv
@@ -1024,25 +1024,25 @@ Beginner,Débutant,
 Benefit Type and Amount,Type de prestation et montant,
 Benefit,Avantages,
 Benefits Applied,Prestations demandées,
-Better Prospects,Meilleures Perspectives,
-Bill Date,Date de la Facture,
+Better Prospects,Meilleures perspectives,
+Bill Date,Date de la facture,
 Bill No,Numéro de Facture,
 Bill of Materials (BOM),Liste de matériaux (nomenclature),
 Bill of Materials,Liste de matériaux,
 Bill,Facturable,
 Billable Hours,Heures facturables,
 Billed Amount,Montant facturé,
-Billed Amt,Mnt Facturé,
+Billed Amt,Mnt facturé,
 Billed Qty,Qté facturée,
 Billed,Facturé,
-Billing Address Name,Nom de l'Adresse de Facturation,
+Billing Address Name,Nom de l'adresse de facturation,
 Billing Address is same as Shipping Address,Mon adresse de facturation est identique à mon adresse de livraison,
 Billing Address,Adresse de facturation,
 Billing Amount,Montant à facturer,
-Billing City,Ville de Facturation,
-Billing Country,Pays de Facturation,
-Billing County,Département de Facturation,
-Billing Currency,Devise de Facturation,
+Billing City,Ville de facturation,
+Billing Country,Pays de facturation,
+Billing County,Département de facturation,
+Billing Currency,Devise de facturation,
 Billing Date,Date de facturation,
 Billing Details,Détails de la facturation,
 Billing Hours,Heures facturées,
@@ -1052,10 +1052,10 @@ Billing Interval,Intervalle de facturation,
 Billing Qty,Quantité facturée,
 Billing Quantity,Quantité facturée,
 Billing Rate,Taux de facturation,
-Billing State,État de la Facturation,
-Billing Status,Statut de la Facturation,
+Billing State,Comté de facturation,
+Billing Status,Statut de la facturation,
 Billing Zipcode,Code postal de facturation,
-Billing and Delivery Status,Facturation et Statut de Livraison,
+Billing and Delivery Status,Facturation et statut de livraison,
 Billing currency must be equal to either default company's currency or party account currency,La devise de facturation doit être égale à la devise de la société par défaut ou à la devise du compte du partenaire,
 Billing,Facturation,
 Bills raised by Suppliers.,Factures émises par des fournisseurs.,
@@ -1080,7 +1080,7 @@ Blog Subscriber,Abonné au Blog,
 Blood Group,Groupe Sanguin,
 Blue,Bleu,
 Body,Corps,
-Boms,Listes de Matériaux,
+Boms,Nomenclatures,
 Bonus Amount,Montant du bonus,
 Bonus Payment Date cannot be a past date,La date de paiement du bonus ne peut pas être une date passée,
 Bonus Payment Date,Date de paiement du bonus,
@@ -1096,15 +1096,15 @@ Booking Calendar,Calendrier de réservation,
 Booking rate,Taux de réservation,
 Bookings,Réservations,
 Both Trial Period Start Date and Trial Period End Date must be set,La date de début de la période d'essai et la date de fin de la période d'essai doivent être définies,
-Both Warehouse must belong to same Company,Les deux Entrepôt doivent appartenir à la même Société,
+Both Warehouse must belong to same Company,Les deux entrepôt doivent appartenir à la même société,
 Box,Boîte,
-Brake Oil,Liquide de Frein,
-Brake Pad,Plaquettes de Frein,
-Branch (optional),Branch (Optionnel),
+Brake Oil,Liquide de frein,
+Brake Pad,Plaquettes de frein,
+Branch (optional),Branche (Optionnel),
 Branch Code,Code de la branche,
 Branch,Branche,
 Brand Defaults,Paramètres par défaut de la marque,
-Brand Name,Nom de la Marque,
+Brand Name,Nom de la marque,
 Brand,Marque,
 Breakdown,Panne,
 Broadcasting,Radio/Télévision,
@@ -2816,7 +2816,7 @@ Fees,Frais,
 Fetch Data,Récupérer des données,
 Fetch Items from Warehouse,Obtenir les articles d'un entrepôt,
 Fetch Serial Numbers based on FIFO,Récupérer les numéros de série en PEPS,
-Fetch Subscription Updates,Vérifier les mises à jour des abonnements,
+Fetch Subscription Updates,Vérifier si l'abonnement est à jour,
 Fetch based on FIFO,Récupérer en FIFO,
 Fetch exploded BOM (including sub-assemblies),Récupérer la nomenclature éclatée (y compris les sous-ensembles),
 Fetch items based on Default Supplier.,Récupérer les articles sur la base du fournisseur par défaut,
@@ -8241,7 +8241,7 @@ Training,Formation,
 Trainings,Formations,
 Transaction Currency,Devise de la Transaction,
 Transaction Date,Date de la transaction,
-Transaction Details,détails de la transaction,
+Transaction Details,Détails de la transaction,
 Transaction ID,Identifiant de Transaction,
 Transaction Name,Nom de la transaction,
 Transaction Type,Type de transaction,
