feat: Subscription portal wip

--- a/erpnext/translations/fr.csv
+++ b/erpnext/translations/fr.csv
@@ -5119,7 +5119,7 @@ Pay Against Benefit Claim,Payer la demande de prestations,
 Pay Remaining,Reste à payer,
 Pay To / Recd From,Payé À / Reçu De,
 Pay {0},Payer {0},
-Pay,Payé,
+Pay,Payer,
 Payable Account,Comptes créditeurs,
 Payable Amount,Montant à payer,
 Payable Principal Amount,Montant du principal à payer,
@@ -6163,7 +6163,7 @@ Reference Purchase Receipt,Référence de reçu d'achat,
 Reference Row #,Ligne de Référence #,
 Reference Row,Ligne de référence,
 Reference Type,Type de référence,
-Reference document doesn't have the 'get_subscription_plans_details' method to process subscriptions,Le document de référence n'a pas la méthode 'get_subscription_plans_details' permettant de traiter les abonnement,
+Reference document doesn't have the 'get_stripe_subscription_plans_details' method to process subscriptions,Le document de référence n'a pas la méthode 'get_stripe_subscription_plans_details' permettant de traiter les abonnement,
 Reference document is not linked to Stripe payment plans,Le document de référence n'est pas lié à un plan de paiement Stripe,
 "Reference: {0}, Item Code: {1} and Customer: {2}","Référence: {0}, Code de l'article: {1} et Client: {2}",
 Reference,Référence,
