fix: French translations

--- a/erpnext/translations/fr.csv
+++ b/erpnext/translations/fr.csv
@@ -836,18 +836,18 @@ Automatically Fetch Payment Terms,Récupérer les termes de paiement automatique
 Automatically Process Deferred Accounting Entry,Traiter automatiquement les écritures comptables différées,
 Automatically Set Serial Nos based on FIFO,Définir automatiquement les n° de série en PEPS,
 Automatically generate payment entries for all unpaid sales invoice with a due date between {0} and {1} for customers with a valid Sepa mandate ?,Générer automatiquement les écritures de paiement pour toutes les factures impayées ayant une date d'échéance entre le {0} et le {1} pour les clients ayant un mandat sepa valide ?,
-Automatically synchronize with Google Calendar,Synchroniser automatiquement avec Google Calendar,
+Automatically synchronize with Google Calendar,Synchroniser automatiquement avec Google Agenda,
 Automotive,Automobile,
 Availability Of Slots,Disponibilité des créneaux,
-Available Batch Qty at From Warehouse,Qté de Lot Disponible Depuis l'Entrepôt,
-Available Batch Qty at Warehouse,Qté de lot disponible à l'Entrepôt,
+Available Batch Qty at From Warehouse,Qté de lot disponible à l'entrepôt source,
+Available Batch Qty at Warehouse,Qté de lot disponible à l'entrepôt,
 Available For Use Date,Date de mise en service,
 Available Leaves,Congés disponibles,
-Available Qty at From Warehouse,Qté Disponible Depuis l'Entrepôt,
-Available Qty at Source Warehouse,Qté Disponible à l'Entrepôt Source,
-Available Qty at WIP Warehouse,Qté disponible à l'Entrepôt de Travaux en Cours,
-Available Qty at Warehouse,Qté Disponible à l'Entrepôt,
-Available Qty,Qté Disponible,
+Available Qty at From Warehouse,Qté disponible à l'entrepôt source,
+Available Qty at Source Warehouse,Qté disponible à l'entrepôt source,
+Available Qty at WIP Warehouse,Qté disponible à l'entrepôt de travaux en cours,
+Available Qty at Warehouse,Qté disponible à l'entrepôt,
+Available Qty,Qté disponible,
 Available Quantity,Quantité disponible,
 Available Selling,Vente disponible,
 Available Stock for Packing Items,Stock disponible pour les articles colisés,
@@ -1105,6 +1105,7 @@ Booked,Réservé,
 Booking Calendar,Calendrier de réservation,
 Booking rate,Taux de réservation,
 Bookings,Réservations,
+Bookings (Hours),Réservations (Heures),
 Both Trial Period Start Date and Trial Period End Date must be set,La date de début de la période d'essai et la date de fin de la période d'essai doivent être définies,
 Both Warehouse must belong to same Company,Les deux entrepôt doivent appartenir à la même société,
 Box,Boîte,
@@ -1287,7 +1288,7 @@ Cannot {0} {1} {2} without any negative outstanding invoice,Can not {0} {1} {2} 
 "Capacity Planning Error, planned start time can not be same as end time",Erreur de planification: L'heure de début ne peut pas être identique à l'heure de fin.,
 Capacity Planning For (Days),Planification de Capacité Pendant (Jours),
 Capacity Planning,Planification de Capacité,
-Capacity,Capacité,
+Capacity (Hours),Capacité (Heures),
 Capital Equipments,Capitaux Immobilisés,
 Capital Stock,Capital Social,
 Capital Work In Progress Account,Compte d'immobilisation en cours,
@@ -1581,27 +1582,27 @@ Consolidated,Consolidé,
 Consultant ID,ID du consultant,
 Consultant,Consultant,
 Consulting,Consultant,
-Consumable Cost,Coût de Consommable,
+Consumable Cost,Coût des consommables,
 Consumable,Consommable,
-Consumed Amount,Montant Consommé,
+Consumed Amount,Montant consommé,
 Consumed Items,Articles consommés,
-Consumed Qty,Qté Consommée,
+Consumed Qty,Qté consommée,
 Consumed,Consommé,
 Consumer Key,Clé de consommateur,
-Consumer Products,Produits de Consommation,
+Consumer Products,Produits de consommation,
 Consumer Secret,Secret de consommateur,
 Contact Desc,Desc. du Contact,
 Contact Details,Coordonnées,
 Contact Email,Email du Contact,
 Contact HTML,HTML du Contact,
-Contact Info,Information du Contact,
+Contact Info,Information du contact,
 Contact Information,Informations de contact,
 Contact List,Liste de contacts,
-Contact Mobile No,N° de Portable du Contact,
+Contact Mobile No,N° de portable du contact,
 Contact Name,Nom du contact,
-Contact No.,N° du Contact,
-Contact Number,Numéro de Contact,
-Contact Person,Personne à Contacter,
+Contact No.,N° du contact,
+Contact Number,Numéro de contact,
+Contact Person,Personne à contacter,
 Contact Phone,Téléphone du contact,
 Contact Us,Contactez-nous,
 Contact,Contact,
@@ -2106,11 +2107,11 @@ Default Selling Terms,Termes et conditions applicables à la vente,
 Default Service Level Agreement,Accord de niveau de service par défaut,
 Default Shift,Quart par défaut,
 Default Shipping Account,Compte d'expédition par défaut,
-Default Source Warehouse,Entrepôt Source par Défaut,
+Default Source Warehouse,Entrepôt source par défaut,
 Default Stock UOM,Unité de mesure par Défaut des Articles,
 Default Supplier Group,Groupe de fournisseurs par défaut,
-Default Supplier,Fournisseur par Défaut,
-Default Target Warehouse,Entrepôt Cible par Défaut,
+Default Supplier,Fournisseur par défaut,
+Default Target Warehouse,Entrepôt cible par défaut,
 Default Tax Template,Modèle de taxes par défaut,
 Default Tax Withholding Config,Configuration de taxe retenue à la source par défaut,
 Default Territory,Région par défaut,
@@ -3901,7 +3902,7 @@ Item-wise Sales Register,Registre des ventes par article,
 Item: {0} does not exist in the system,Article : {0} n'existe pas dans le système,
 Item,Article,
 Items Filter,Filtre d'articles,
-Items Required,Articles requis,
+Items Required,Articles demandés,
 Items To Be Requested,Projection des commandes d'articles,
 Items and Pricing,Articles et prix,
 Items are required to pull the raw materials which is associated with it.,Des articles sont nécessaires pour récupérer les matières premières qui leur sont associées.,
@@ -4344,7 +4345,7 @@ Mandatory For Profit and Loss Account,Obligatoire pour le compte de résultat,
 Mandatory,Obligatoire,
 Manual entry cannot be created! Disable automatic entry for deferred accounting in accounts settings and try again,Une écriture manuelle ne peut pas être créée! Désactivez les écritures automatiques pour les écritures comptables différées dans les paramètres de comptabilité et réessayez.,
 Manual,Manuel,
-Manufacture against Material Request,Production liée à une Demande de matériel,
+Manufacture against Material Request,Production liée à une demande de matériel,
 Manufacture,Production,
 Manufactured Qty,Qté Produite,
 Manufactured,Fabriqué,
@@ -6812,13 +6813,13 @@ Scorecard Actions,Actions de la Fiche d'Évaluation,
 Scorecards,Fiches d'Évaluation,
 Scoring Criteria,Critères de Notation,
 Scoring Setup,Paramétrage de la Notation,
-Scoring Standings,Classement des Fiches d'Évaluation,
+Scoring Standings,Classement des fiches d'évaluation,
 Scrap %,% de Rebut,
-Scrap Items,Mettre au Rebut des Articles,
-Scrap Material Cost(Company Currency),Coût de Mise au Rebut des Matériaux (Devise Société),
-Scrap Material Cost,Coût de Mise au Rebut des Matériaux,
-Scrap Warehouse,Entrepôt de Rebut,
-Scrap,Mettre au Rebut,
+Scrap Items,Mettre des articles au rebut,
+Scrap Material Cost(Company Currency),Coût de mise au rebut des matériaux (Devise société),
+Scrap Material Cost,Coût de mise au rebut des matériaux,
+Scrap Warehouse,Entrepôt de rebut,
+Scrap,Mettre au rebut,
 Scrapped,Mis au rebut,
 Search APIs,API de recherche,
 Search Item (Ctrl + i),Rechercher un élément (Ctrl + i),
@@ -6873,28 +6874,28 @@ Select Default Supplier,Sélectionner le Fournisseur par Défaut,
 Select Difference Account,Sélectionnez un compte d'écart,
 Select DocType,Sélectionnez un type de document,
 Select Employees,Sélectionner les employés,
-Select Fiscal Year...,Sélectionner Exercice ...,
-Select Item (optional),Sélectionnez l'Article (facultatif),
-Select Items based on Delivery Date,Sélectionnez les articles en fonction de la Date de Livraison,
+Select Fiscal Year...,Sélectionner un exercice ...,
+Select Item (optional),Sélectionnez l'article (facultatif),
+Select Items based on Delivery Date,Sélectionnez les articles en fonction de la date de livraison,
 Select Items to Manufacture,Sélectionner les articles à produire,
 Select Items,Sélectionner des articles,
 Select Loyalty Program,Sélectionner un programme de fidélité,
 Select Maximum Of 1,Sélectionnez un maximum de 1,
 Select POS Profile,Sélectionnez le profil POS,
-Select Payment Account to make Bank Entry,Sélectionner Compte de Crédit pour faire l'Écriture Bancaire,
+Select Payment Account to make Bank Entry,Sélectionner une compte bancaire pour faire l'écriture bancaire,
 Select Payroll Period,Sélectionner la Période de Paie,
 Select Possible Supplier,Sélectionner le Fournisseur Possible,
 Select Property,Veuillez sélectionner la propriété,
 Select Quantity,Sélectionner une quantité,
 Select Serial No,Veuillez sélectionner le numéro de série,
-Select Serial Numbers,Sélectionnez les Numéros de Série,
-Select Shipping Address,Sélectionner l'Adresse de livraison,
-Select Supplier Address,Sélectionner l'Adresse du Fournisseur,
-Select Target Warehouse,Sélectionner l'Entrepôt Cible,
+Select Serial Numbers,Sélectionnez les numéros de série,
+Select Shipping Address,Sélectionner l'adresse de livraison,
+Select Supplier Address,Sélectionner l'adresse du fournisseur,
+Select Target Warehouse,Sélectionner l'entrepôt cible,
 Select Terms and Conditions,Sélectionner les Termes et Conditions,
-Select Transaction,Sélectionner la Transaction,
+Select Transaction,Sélectionner une transaction,
 Select Users,Sélectionner les utilisateurs,
-Select Warehouse...,Sélectionner l'Entrepôt ...,
+Select Warehouse...,Sélectionner l'entrepôt ...,
 Select a Default Priority.,Sélectionnez une priorité par défaut.,
 Select a Supplier from the Default Supplier List of the items below.,Sélectionnez un fournisseur dans la liste des fournisseurs par défaut pour les articles ci-dessous.,
 Select a bank transaction to find matching transactions,Sélectionnez une transaction bancaire pour trouver des documents correspondants.,
@@ -7285,7 +7286,7 @@ Source Name,Nom de la Source,
 Source Type,Type de source,
 Source Warehouse (Material Transfer),Entrepôt source (Transfert de matériaux),
 Source Warehouse Address,Adresse de l'entrepôt source,
-Source Warehouse,Entrepôt Source,
+Source Warehouse,Entrepôt source,
 Source Warehouses (Optional),Entrepôts source (Optionnel),
 Source and Target Location cannot be same,Les localisations source et cible ne peuvent pas être identiques,
 Source and target warehouse cannot be same for row {0},L'entrepôt source et destination ne peuvent être similaire dans la ligne {0},
@@ -8336,7 +8337,7 @@ Transfer Type,Type de transfert,
 Transfer an asset from one warehouse to another,Transfert d'un actif d'un entrepôt à un autre,
 Transfer,Transférer,
 Transfered,Transféré,
-Transferred Qty,Quantité Transférée,
+Transferred Qty,Quantité transférée,
 Transferred Quantity,Quantité transférée,
 Transferred,Transféré,
 "Transferring cannot be done to an Employee. \
@@ -8516,7 +8517,7 @@ Urgent,Urgent,
 Use Custom Cash Flow Format,Utiliser le format de flux de trésorerie personnalisé,
 Use Google Maps Direction API to calculate estimated arrival times,Utiliser l'API Google Maps Direction pour calculer l'arrivée estimée,
 Use Google Maps Direction API to optimize route,Utiliser l'API Google Maps Direction pour optimiser l'itinéraire,
-Use Multi-Level BOM,Utiliser nomenclature à Plusieurs Niveaux,
+Use Multi-Level BOM,Utiliser une nomenclature à plusieurs niveaux,
 Use Naming Series,Utiliser la série de noms,
 Use Payment Gateway Lifecycle,Suivre le cycle de facturation de la passerelle de paiement,
 Use Sandbox,Utiliser la sandbox,
@@ -8792,8 +8793,8 @@ Work Orders in Progress,Ordres de travail en cours,
 Work Orders,Ordres de travail,
 Work Summary for {0},Récapitulatif de travail de {0},
 Work in Progress,Travaux en cours,
-Work-in-Progress Warehouse is required before Submit,L'entrepôt des Travaux en Cours est nécessaire avant de Valider,
-Work-in-Progress Warehouse,Entrepôt des Travaux en Cours,
+Work-in-Progress Warehouse is required before Submit,L'entrepôt de travaux en cours est nécessaire pour pouvoir valider,
+Work-in-Progress Warehouse,Entrepôt de travaux en cours,
 Workday {0} has been repeated.,Le jour ouvré {0} a été répété,
 Workday,Jour ouvré,
 Worked On Holiday,Travail en vacances,
