--- a/erpnext/translations/fr.csv
+++ b/erpnext/translations/fr.csv
@@ -8372,7 +8372,7 @@ Tree of financial accounts.,Arbre des comptes financiers.,
 Trial Balance (Simple),Balance comptable (simple),
 Trial Balance for Party,Balance auxiliaire,
 Trial Balance,Balance comptable,
-Trial Period End Date Cannot be before Trial Period Start Date,La Date de fin de la période d'essai ne peut pas précéder la date de début de la période d'évaluation,
+Trial Period End Date Cannot be before Trial Period Start Date,La Date de fin de la période d'essai ne peut pas précéder la date de début de la période d'essai,
 Trial Period End Date,Date de fin de la période d'essai,
 Trial Period Start Date,Date de début de la période d'essai,
 Trial Validated,Essai validé,
