--- a/erpnext/translations/fr.csv
+++ b/erpnext/translations/fr.csv
@@ -4740,7 +4740,7 @@ No employee found,Aucun employé trouvé,
 No employees for the mentioned criteria,Aucun employé pour les critères mentionnés,
 No events to display for this item,Aucun créneau disponible pour cet article,
 No events to display,Aucun créneau disponible,
-No gain or loss in the exchange rate,Aucun gain ou perte dans le taux de change,
+No gain or loss in the exchange rate,Aucun gain ou perte liés à ce taux de change,
 No issue has been raised by the caller.,Aucun ticket ouvert par cet appelant,
 No items found. Scan barcode again.,Aucun article trouvé. Scannez le code barre à nouveau.,
 No items found.,Aucun article trouvé.,
@@ -7052,7 +7052,7 @@ Set Accepted Warehouse,Définir l'entrepôt de réception,
 Set Advances and Allocate (FIFO),Set Advances and Allocate (FIFO),
 Set Basic Rate Manually,Définir le prix unitaire de base manuellement,
 "Set Default Values like Company, Currency, Current Fiscal Year, etc.","Définir les Valeurs par Défaut comme : Societé, Devise, Exercice Actuel, etc...",
-Set Exchange Gain / Loss,Définir le·la gain / perte de perte,
+Set Exchange Gain / Loss,Définir le·la gain / perte de change,
 Set From Warehouse,Définir depuis l'entrepôt,
 Set Invoice Value for B2C. B2CL and B2CS calculated based on this invoice value.,Défini la valeur de la facture pour B2C. B2CL et B2CS sont calculés sur la base de la valeur de cette facture.,
 Set Item Group-wise budgets on this Territory. You can also include seasonality by setting the Distribution.,Définir des budgets par Groupes d'Articles sur ce Territoire. Vous pouvez également inclure de la saisonnalité en définissant la Répartition.,
