fix: Setup wizard

--- a/erpnext/translations/fr.csv
+++ b/erpnext/translations/fr.csv
@@ -770,7 +770,7 @@ Atleast one item should be entered with negative quantity in return document,Au 
 Atleast one of the Selling or Buying must be selected,Au moins Vente ou Achat doit être sélectionné,
 Atleast one warehouse is mandatory,Au moins un entrepôt est obligatoire,
 "Attach .csv file with two columns, one for the old name and one for the new name","Attacher un fichier .csv avec deux colonnes, une pour l'ancien nom et une pour le nouveau nom",
-Attach Logo,Joindre le Logo,
+Attach Logo,Joindre un logo,
 Attach a web link,Attacher un lien web,
 Attach custom Chart of Accounts file,Attacher un fichier de plan comptable personnalisé,
 Attachment Print Format,Format d'impression de la pièce jointe,
@@ -956,7 +956,7 @@ Bank Guarantee Number,Numéro de garantie bancaire,
 Bank Guarantee Type,Type de garantie bancaire,
 Bank Guarantee,Garantie bancaire,
 Bank Logo,Logo de la banque,
-Bank Name,Nom de la Banque,
+Bank Name,Nom de la banque,
 Bank Overdraft Account,Compte de découvert bancaire,
 Bank Reconciliation Detail,Détail des rapprochements bancaires,
 Bank Reconciliation Statement,Relevé de rapprochement bancaire,
@@ -1484,7 +1484,7 @@ Compact Item Print,Impression de l'Article Compacté,
 Companies,Sociétés,
 Company (not Customer or Supplier) master.,Données de base de la société (ni les clients ni les fournisseurs),
 Company Abbreviation cannot have more than 5 characters,L'abréviation de l'entreprise ne peut pas comporter plus de 5 caractères,
-Company Abbreviation,Abréviation de la Société,
+Company Abbreviation,Abréviation de la société,
 Company Account,Compte comptable,
 Company Address Name,Nom de l'adresse de la société,
 Company Address,Adresse de la Société,
@@ -7838,7 +7838,7 @@ Thank you,Merci,
 The 'From Package No.' field must neither be empty nor it's value less than 1.,Le champ 'N° de Paquet' ne doit pas être vide ni sa valeur être inférieure à 1.,
 The Asset Module is all set up!,Le module de gestion des actifs est configuré !,
 The BOM which will be replaced,La nomenclature qui sera remplacée,
-The Brand,La Marque,
+The Brand,La société,
 The Buying Module is all set up!,Le module de gestion des achats est configuré !,
 The CRM Module is set up!,Le module CRM est configuré !,
 The Campaign '{0}' already exists for the {1} '{2}',La campagne '{0}' existe déjà pour le/la {1} '{2}',
@@ -8745,7 +8745,7 @@ Weighting Function,Fonction de Pondération,
 Welcome email sent,Email de bienvenue envoyé,
 Welcome to {0},Bienvenue sur {0},
 What do you need help with?,Vous avez besoin d'aide,
-What does it do?,Qu'est-ce que ça fait ?,
+What does it do?,Description de l'activité,
 Wheels,Roues,
 Where manufacturing operations are carried.,Là où les opérations de production sont réalisées.,
 "While creating account for child Company {0}, parent account {1} not found. Please create the parent account in corresponding COA",Compte parent {1} introuvable lors de la création du compte pour la filiale {0}. Veuillez créer le compte parent dans le plan de compte correspondant.,
@@ -8876,7 +8876,7 @@ You must be a registered supplier to generate e-Way Bill,Vous devez être un fou
 You need to be logged in to access this page,Vous devez être connecté pour avoir accès à cette page,
 You need to enable Shopping Cart,Vous devez activer le Panier,
 Your Company set in Dokos,Votre société dans Dokos,
-Your Organization,Votre Organisation,
+Your Organization,L'activité de la société,
 Your Products or Services,Vos Produits ou Services,
 Your Session will be expire in ,Votre sessions expirera dans,
 Your Suppliers,Vos Fournisseurs,
