--- a/erpnext/translations/fr.csv
+++ b/erpnext/translations/fr.csv
@@ -3011,6 +3011,7 @@ For the 'Apply Rule On Other' condition the field {0} is mandatory,Le champ {0} 
 "For {0}, only credit accounts can be linked against another debit entry","Pour {0}, seuls les comptes de crédit peuvent être liés avec une autre écriture de débit",
 "For {0}, only debit accounts can be linked against another credit entry","Pour {0}, seuls les comptes de débit peuvent être liés avec une autre écriture de crédit",
 For,Pour,
+Forecasting,Prévisionnel,
 Foreign Trade Details,Détails du Commerce Extérieur,
 Form View,Vue de Formulaire,
 Formula,Formule,
@@ -9116,12 +9117,15 @@ per hour,par heure,
 performing either one below:,effectuer l'une des actions suivantes:,
 prev,préc.,
 production,production,
+purchase,achat,
 received from,reçu de,
 rgt,rgt,
 route,route,
 rows selected,lignes sélectionnées,
+sales,vente,
 sandbox,sandbox,
 status html,Statut,
+subcontracted,sous-traitance,
 title,titre,
 to,à,
 unique e.g. SAVE20  To be used to get discount,Unique. Ex. NOEL19,
