fix: transaction controller + translations

--- a/erpnext/translations/fr.csv
+++ b/erpnext/translations/fr.csv
@@ -5015,8 +5015,8 @@ Operation Description,Description de l'Opération,
 Operation ID,ID de l'Opération,
 Operation Id,Identifiant de l'opération,
 Operation Time ,Durée de l'opération,
-Operation Time must be greater than 0 for Operation {0},Temps de l'Opération doit être supérieur à 0 pour l'Opération {0},
-Operation Time,Heure de l'Opération,
+Operation Time must be greater than 0 for Operation {0},La durée de l'opération doit être supérieure à 0 pour l'opération {0},
+Operation Time,Durée de l'opération,
 Operation completed for how many finished goods?,Opération terminée pour combien de produits finis ?,
 "Operation {0} longer than any available working hours in workstation {1}, break down the operation into multiple operations","Opération {0} plus longue que toute heure de travail disponible dans la station de travail {1}, veuillez séparer l'opération en plusieurs opérations",
 Operation,Opération,
