fix: make_supplier_quotation

--- a/erpnext/translations/fr.csv
+++ b/erpnext/translations/fr.csv
@@ -8200,7 +8200,7 @@ To Amount,Au montant,
 To Be Paid,A payer,
 To Bill,À Facturer,
 To Currency,Devise Finale,
-To Date cannot be before From Date.,La date de fin ne peut pas être supérieure à la date de début.,
+To Date cannot be before From Date.,La date de fin ne peut pas être antérieure à la date de début.,
 To Date cannot be before From Date,La date de fin ne peut pas être avant la date de début,
 To Date cannot be less than From Date,La date de fin ne peut pas précéder la date de début,
 To Date must be greater than From Date,La date de fin doit être supérieure à la date de début,
