--- a/erpnext/translations/fr.csv
+++ b/erpnext/translations/fr.csv
@@ -550,7 +550,7 @@ Allows you to link this item booking with a customer or a lead. Used to select t
 Already booked,Déjà réservé,
 Already paid,Déjà payé,
 Already record exists for the item {0},L'enregistrement existe déjà pour l'article {0},
-"Already set default in pos profile {0} for user {1}, kindly disabled default","Déjà défini par défaut dans le profil pdv {0} pour l'utilisateur {1}, veuillez désactiver la valeur par défaut",
+"Already set default in pos profile {0} for user {1}, kindly disabled default","Déjà défini par défaut dans le profil de point de vente {0} pour l'utilisateur {1}, veuillez désactiver la valeur par défaut",
 Alternate Item,Article alternatif,
 Alternating entries as IN and OUT during the same shift,Alterner les entrées 'Entrant' et 'Sortant' pendant le même quart,
 Alternative Item Code,Code de l'article alternatif,
@@ -769,7 +769,7 @@ Assign to Name,Attribué à,
 Assign,Attribuer,
 Assigning Structures...,Attribution des structures...,
 Associate,Associé,
-At least one mode of payment is required for POS invoice.,Au moins un mode de paiement est nécessaire pour une facture de PDV,
+At least one mode of payment is required for POS invoice.,Au moins un mode de paiement est nécessaire pour une facture de point de vente,
 At least one of the Applicable Modules should be selected,Sélectionnez au moins un module,
 Atleast one asset has to be selected.,Au moins un actif doit être sélectionné,
 Atleast one invoice has to be selected.,Au moins une facture doit être sélectionnée,
@@ -1941,7 +1941,7 @@ Customer Name,Nom du client,
 Customer Naming By,Nommage du client,
 Customer PO Details,Détails de la commande client,
 Customer PO,N° de bon de commande du client,
-Customer POS Id,ID PDV du Client,
+Customer POS Id,ID de point de vente du client,
 Customer POS id,ID de point de vente du client,
 Customer Primary Address,Adresse principale du client,
 Customer Primary Contact,Contact principal du client,
@@ -4924,7 +4924,7 @@ Offer Term,Terme de la Proposition,
 Office Equipments,Équipements de Bureau,
 Office Maintenance Expenses,Charges d'Entretien de Bureau,
 Office Rent,Loyer du Bureau,
-Offline POS Name,Nom du PDV Hors-ligne`,
+Offline POS Name,Nom du point de vente hors-ligne`,
 Offline,Hors ligne,
 Oil Change,Vidange,
 Old Parent,Grand Parent,
@@ -5127,12 +5127,12 @@ PO-JOB.#####,PO-JOB.#####,
 POS Closing Entry Detail,Détails de l'écriture de clôture de point de vente,
 POS Closing Entry Taxes,Taxes de l'écriture de clôture de point de vente,
 POS Closing Entry,Ecriture de clôture de point de vente,
-POS Closing Voucher Details,Détail du bon de clôture du PDV,
-POS Closing Voucher Invoices,Factures du bon de clôture du PDV,
-POS Closing Voucher Taxes,Taxes du bon de clôture du PDV,
+POS Closing Voucher Details,Détail du bon de clôture du point de vente,
+POS Closing Voucher Invoices,Factures du bon de clôture du point de vente,
+POS Closing Voucher Taxes,Taxes du bon de clôture du point de vente,
 POS Closing Voucher already exists for {0} between date {1} and {2},Un bon de clôture du point de vente existe déjà pour {0} entre le {1} et le {2},
 POS Closing Voucher,Bon de clôture du point de vente,
-POS Customer Group,Groupe Clients PDV,
+POS Customer Group,Groupe de clients du point de vente,
 POS Field,Champ du point de vente,
 POS Invoice Item,Article de la facture de point de vente,
 POS Invoice Merge Log,Journal de réconciliation des factures de point de vente,
@@ -5140,17 +5140,17 @@ POS Invoice Reference,Référence de facture de point de vente,
 POS Invoice should have {} field checked.,La facture de point de vente doit avoir {} champs cochés,
 POS Invoice,Facture de point de vente,
 POS Invoices,Factures de point de vente,
-POS Item Group,Groupe d'articles PDV,
+POS Item Group,Groupe d'articles du point de vente,
 POS Opening Entry Detail,Détails de l'écriture d'ouverture de point de vente,
 POS Opening Entry,Ecriture d'ouverture de point de vente,
 POS Payment Method,Méthode de paiement du point de vente,
-POS Profile User,Utilisateur du profil PDV,
-POS Profile is required to use Point-of-Sale,Un profil PDV est requis pour utiliser le point de vente,
-POS Profile required to make POS Entry,Profil PDV nécessaire pour faire une écriture de PDV,
-POS Profile,Profil PDV,
+POS Profile User,Utilisateur du profil de point de vente,
+POS Profile is required to use Point-of-Sale,Un profil de point de vente est requis pour utiliser le point de vente,
+POS Profile required to make POS Entry,Un profil de point de vente est nécessaire pour faire une écriture de point de vente,
+POS Profile,Profil de point de vente,
 POS Settings,Paramètres du point de vente,
 POS Transactions,Transactions du point de vente,
-POS,PDV,
+POS,Point de vente,
 PR Detail,Détail PR,
 PR,PR,
 PSOA Cost Center,Centre de coût de situation de compte client,
@@ -7694,6 +7694,7 @@ Subscription Plan Detail,Détail du plan d'abonnement,
 Subscription Plan,Plan d'abonnement,
 Subscription Plans Template,Modèle de plans d'abonnement,
 Subscription Section,Section Abonnement,
+Subscription Settings,Paramètres des abonnements,
 Subscription Start Date,Date de début de l'abonnement,
 Subscription Template,Modèle d'abonnement,
 Subscription created,Abonnement crée,
@@ -7948,7 +7949,7 @@ Territory Target Variance Based On Item Group,Variance des objectifs territoriau
 Territory Targets,Objectifs Régionaux,
 Territory Wise Opportunity Count,Compte d'opportunités par territoire,
 Territory Wise Sales,Ventes par territoire,
-Territory is Required in POS Profile,Le Territoire est Requis dans le Profil PDV,
+Territory is Required in POS Profile,Le territoire est obligatoire dans le profil de point de vente,
 Territory-wise Sales,Ventes par territoire,
 Territory,Région,
 Thank you for your business!,Merci pour votre entreprise !,
@@ -8567,6 +8568,7 @@ Under Graduate,Non Diplômé,
 Under Warranty,Sous Garantie,
 Unfulfilled,Non-rempli,
 Unit Of Measure,Unité de mesure,
+Unit of Measure (UOM),Unité de mesure,
 Unit of Measure {0} has been entered more than once in Conversion Factor Table,Unité de Mesure {0} a été saisie plus d'une fois dans la Table de Facteur de Conversion,
 Unit of Measure,Unité de mesure,
 Unit of measure corresponding to one minute,Unité de mesure correspondant à une minute,
