feat: New subscription API for next invoice date

--- a/erpnext/translations/fr.csv
+++ b/erpnext/translations/fr.csv
@@ -1119,6 +1119,7 @@ Booked,Réservé,
 Booking Calendar,Calendrier de réservation,
 Booking rate,Taux de réservation,
 Bookings (Hours),Réservations (Heures),
+Bookings and events,Réservations et événements,
 Bookings,Réservations,
 Both Trial Period Start Date and Trial Period End Date must be set,La date de début de la période d'essai et la date de fin de la période d'essai doivent être définies,
 Both Warehouse must belong to same Company,Les deux entrepôt doivent appartenir à la même société,
@@ -3942,6 +3943,7 @@ Item-wise Sales History,Historique des ventes par article,
 Item-wise Sales Register,Registre des ventes par article,
 Item: {0} does not exist in the system,Article : {0} n'existe pas dans le système,
 Item,Article,
+Items & Pricing,Articles & Prix,
 Items Filter,Filtre d'articles,
 Items Required,Articles demandés,
 Items To Be Requested,Projection des commandes d'articles,
@@ -8885,6 +8887,7 @@ Website Manager,Responsable du site web,
 Website Settings,Paramètres du site web,
 Website Specifications,Spécifications du Site Web,
 Website Warehouse,Entrepôt du Site Seb,
+Website and portal,Site web et portail,
 Website,Site web,
 Wednesday,Mercredi,
 Week,Semaine,
