--- a/erpnext/translations/fr.csv
+++ b/erpnext/translations/fr.csv
@@ -5258,6 +5258,7 @@ Payable Account,Comptes créditeurs,
 Payable Amount,Montant à payer,
 Payable Principal Amount,Montant du principal à payer,
 Payable,Créditeur,
+Payable,A régler,Subscription
 Payables,Dettes,
 Payer Settings,Paramètres du Payeur,
 Payment Account is mandatory,Le compte de paiement est obligatoire,
